no-jira: missing english translations

--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
@@ -1,4 +1,4 @@
-#Tue Dec 16 09:04:07 CET 2014
+#Tue Feb 06 08:33:13 CET 2018
 add.checkbox=Add checkbox
 assessment=Assessment
 assessment.checkbox.description=Edit per Checkbox\: Apply the checkbox filter to edit the same checkbox across all participants.
@@ -19,6 +19,7 @@ column.header.homepage=Home page
 column.header.node.passed=Passed course element
 column.header.node.points=Score course element
 column.header.points=$\:box.points
+column.header.seqnum=Sequence number
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Access
@@ -49,10 +50,10 @@ down=Down
 edit.checkbox=Edit checkbox
 file=File
 filter.all=Show all
-form.individual.assessment.docs=$org.olat.course.nodes.ms\:form.individual.assessment.docs
 form.error.date=A date must be indicated.
 form.error.scoreOutOfRange=$org.olat.course.assessment\:form.error.scoreOutOfRange
 form.error.wrongFloat=$org.olat.course.nodes.ms\:form.error.wrongFloat
+form.individual.assessment.docs=$org.olat.course.nodes.ms\:form.individual.assessment.docs
 info.title=$org.olat.course.nodes.ms\:info.title
 label=Label
 label.achieved=Achieved
