--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -1,11 +1,13 @@
-#Thu Dec 07 19:14:06 CET 2017
-allowRelativeLinks=Allow links in the entire storage folder.
+#Tue Feb 06 08:34:50 CET 2018
 Intro.self=Press the start button to begin with your self-test.
 Intro.surv=Press the start button to begin with your questionnaire.
 Intro.test=Press the start button to begin with your test.
+allowRelativeLinks=Allow links in the entire storage folder.
 assessment.documents.title=Assessment documents
 attempts.nomoreattempts=There are no more attempts at your disposal.
 attempts.yourattempts=Number of attempts
+block.dates.start=You will be able to start the test at <strong>{0}</strong>.
+block.dates.start.end=The test can be started between the <strong>{0}</strong> and the <strong>{1}</strong>.
 button.export=Export results
 button.stats=$org.olat.ims.qti.statistics.ui\:menu.title
 changelog.title=Resource change log
@@ -181,10 +183,11 @@ table.header.extra.time=Extra
 table.header.lastModified=Last modified
 table.header.results=Results
 time.limit.max=Time limit
+time.limit.test.explain=The test takes a maximum of <strong>{0}</strong>.
 tool.delete.data=Reset all data
 tool.extra.time=Extend test time
 tool.pull=Pull running test
-warning.assessment.mode=Test in process:
+warning.assessment.mode=Test in process\:
 warning.assessment.mode.date={0} from {1} til {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
 warning.users.extra.time=You need to select a least one user which test can be prolonged.
