--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -1,4 +1,4 @@
-#Tue Apr 15 11:12:45 CEST 2014
+#Tue Feb 06 08:32:16 CET 2018
 add=+
 add.to.list=Add to list
 admin.menu.title=Question bank
@@ -11,9 +11,9 @@ classification.taxonomic.path=Subject path
 classification.taxonomic.path.incl=Subjects
 classification.taxonomy.level=Subject
 classification.taxonomy.parents=Path
+collection.add.to.source=Add questions to list "{0}"
 collection.creationDate=Created at
 collection.name=Name
-collection.add.to.source=Add questions to list "{0}"
 commands=Question
 confirm.copy.button=Copy
 confirm.copy.editable=Allow other users to edit the question
@@ -23,17 +23,18 @@ confirm.copy.title=Copy
 confirm.delete.button=Delete
 confirm.delete.confirmation=Delete all questions
 confirm.delete.confirmation.error=Please confirm
-confirm.delete.questions=Questions
-confirm.delete.title=Delete
 confirm.delete.message=Do you really want to permanently delete these questions? They can not be recovered.
+confirm.delete.questions=Questions
+confirm.delete.source=Do you really want to delete this list?
+confirm.delete.title=Delete
 confirm.unshare=Do your really want to remove this question "{0}"?
 convert.editable=Allow other users to edit the question
+convert.format=Format
 convert.item=Convert
-convert.item.not.possible=You haven't selected any question you can convert.
 convert.item.msg=Do you want to convert the {0} question(s) in the following format?
+convert.item.not.possible=You haven't selected any question you can convert.
 convert.item.successful={0} question(s) successfully converted.
 convert.item.warning={0} was not converted.
-convert.format=Format
 convert.qti21.hint=You will find information about the conversion from QTI 1.2 to QTI 2.1 in the manual
 convert.questions=Questions
 copy=Copy
@@ -177,14 +178,16 @@ menu.pools.main=Catalog
 menu.pools.main.alt=Catalog
 menu.queries=Questions
 menu.queries.all=All questions
-menu.queries.whithout.taxonomy.level=Without subject
 menu.queries.whithout.author=Without author
+menu.queries.whithout.taxonomy.level=Without subject
+menu.queries.without.author=Without author
+menu.queries.without.taxonomy.level=Without subject
 menu.ratings=Ratings
 menu.review=Review
 menu.share=Public shares
-metadatas=Metadata
-metadata.show=Metadata
 metadata.hide=Metadata
+metadata.show=Metadata
+metadatas=Metadata
 my.competences=My subjects
 my.list=My lists
 my.share=My shares
@@ -197,19 +200,23 @@ pool.name=Name
 pool.owners=Owners
 pool.public=Public
 presentation.title=Question bank
-process.activate.not.reviewable.description=It is not possible to review questions in the format 'QTI 1.2'. Please previously convert the question to the format 'QTI 2.1'.
+previous=Previous
 process.activate.locked=The question is opened by '{0}'. Therefore, you are not able to start the review process.
+process.activate.not.reviewable.description=It is not possible to review questions in the format 'QTI 1.2'. Please previously convert the question to the format 'QTI 2.1'.
 process.activate.review=Review question
 process.activate.review.description=The question is in the status 'Review'. Please review the question carefully to technical correctness and with regards to content. Subsequently you have to push the button below to rate the question. 
 process.activate.start.review=Start review process
 process.activate.start.review.description=You can now create and revise the question, until it has a sufficient quality. If the question is completely created, you have to start the review process by pushing the button below. Afterwards the question can not be edited anymore.
 process.comment=Comment
 process.confirm.endOfLife=If a question is end of life, the question can not be used anymore. Do you really want to set the end of life for the question "{0}"?
-process.review=Review
+process.endOfLife=End of life
+process.final=Final
+process.rating=Rating
 process.rating.button=Rate
 process.rating.description=Please rate the question. You are only once able to rate a question. After the rating the question is not in the list of the review questions anymore.
 process.rating.title=Review
-process.rating=Rating
+process.review=Review
+process.revision=Revision
 process.start.review.button=$\:process.activate.start.review
 process.start.review.description=After the start of the review process all ratings are deleted and the question can not be edited anymore. Do you really want to start the review process for the question "{0}"?
 process.start.review.taxonomy.level=$\:general.taxonomy.level
@@ -254,14 +261,14 @@ share.item.pools=Share with pools
 share.options=Do you want to allow other users to edit the imported question(s)? 
 share.pool=Share with pool
 shared=Shared
+sharing.pools.empty.table=This question is not shared in any pool.
 sharing.shares=Groups
 sharing.shares.empty.table=This question is not shared with any group.
-sharing.pools.empty.table=This question is not shared in any pool.
 source.status.draft=$\:lifecycle.status.draft ({0})
+source.status.endOfLife=$\:lifecycle.status.endOfLife ({0})
+source.status.finalVersion=$\:lifecycle.status.finalVersion ({0})
 source.status.review=$\:lifecycle.status.review ({0})
 source.status.revised=$\:lifecycle.status.revised ({0})
-source.status.finalVersion=$\:lifecycle.status.finalVersion ({0})
-source.status.endOfLife=$\:lifecycle.status.endOfLife ({0})
 technical=Technical
 technical.creation=Created
 technical.editor=Editor
