--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -1,4 +1,4 @@
-#Wed Aug 28 17:36:55 CEST 2013
+#Tue Feb 06 08:32:43 CET 2018
 admin.configuration.title=Question bank
 admin.levels.intro=Create those levels that apply to your organisations educational level. Examples for levels in an academic context could be elementary school, middle school, high school, bachelor, master. Within a corporation context, levels could be the following\: without apprenticeship, with vocational training, administration, middle management, CO
 admin.licenses.intro=You can create more license types if the default license types are not sufficient. Please note that the default licenses cannot be deleted.
@@ -8,6 +8,7 @@ admin.review.process.decision.type=Decision method
 admin.review.process.title=Review process
 admin.studyfields.intro=Subjects allow for technical indexing the question items. It's organized as a hierarchical structure for modelling the potential degree programs. Select the "$org.olat.modules.taxonomy.ui\:add.taxonomy.level" in order to create a new subject, or select an existing one for editing purposes.
 admin.types.intro=Create more question types if the existing default types aren't sufficient. Please note that the default question types can not be deleted.
+average.rating.for.final=Average rating for status "final"
 collections.enabled=Lists
 create.infos.page=Create infos page
 create.level=Create level
@@ -15,12 +16,12 @@ create.license=Create license
 create.type=Create type
 delete.level=Delete
 delete.level.confirm=Do you really want to delete this level?
-delete.taxonomyLevel=Delete
-delete.taxonomyLevel.confirm=Do you really want to delete this subject "{0}"?
-delete.qustions.without.author=Delete questions when author deleted
-delete.qustions.without.author.info=When a user is deleted, he is removed as author from his question items. If this option is enabled and the user is the only author of the question item, the question item is deleted as well.
 delete.license=Delete
 delete.license.confirm=Do you really want to delete this license?
+delete.qustions.without.author=Delete questions when author deleted
+delete.qustions.without.author.info=When a user is deleted, he is removed as author from his question items. If this option is enabled and the user is the only author of the question item, the question item is deleted as well.
+delete.taxonomyLevel=Delete
+delete.taxonomyLevel.confirm=Do you really want to delete this subject "{0}"?
 delete.type=Delete
 delete.type.confirm=Do you really want to delete this type?
 edit.info.page=Edit infos page
@@ -32,36 +33,35 @@ error.item.type.unique=A question type with this name already exists.
 final.visibility=Visibility of final questions
 final.visibility.manager=Manager
 final.visibility.manager.teacher=Manager, Teacher
+import.create.subject=Create subject when importing
 item.license.deleted=License has been successfully deleted.
 item.license.notdeleted=License cannot be deleted, it is probably in use.
 item.type.deleted=Type has been successfully deleted.
 item.type.notdeleted=Type cannot be deleted, it is probably in use.
-import.create.subject=Create subject when importing
 level.key=ID
 level.level=Level
 level.translation=Translation
 license.id=ID
 license.key=License
+lower.limit=Lower limit for positive decision
 lower.limit.desc=The decision method "Lower limit" changes the status of a question to "$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion", if the minimum number of ratings is reached and if all ratings are equal or higher then the lower limit. If a rating is lower then the lower limit, the question status this immediately changed to "$org.olat.modules.qpool.ui\:lifecycle.status.revised", even if the minimum number of ratings is not reached yet.
 lower.limit.provider.name=Lower limit
-lower.limit=Lower limit for positive decision
 number.of.ratings=Number of ratings per question
 pool.manager.allowed=The pool manager is allowed to
 pool.manager.edit.matadata=see all questions and edit the metadata
 pool.manager.edit.status=change the status of a question
-pool.manager.educational.context=edit the settings "$:\segment.educational.context"
-pool.manager.licenses=edit the settings "$:\segment.licenses"
-pool.manager.item.types=edit the settings "$:\segment.item.types"
-pool.manager.pools=edit the settings "$:\segment.pools"
-pool.manager.review.process=edit the settings "$:\segment.review.process"
-pool.manager.taxonomy=edit the settings "$:\segment.taxonomy"
+pool.manager.educational.context=edit the settings "$\:segment.educational.context"
+pool.manager.item.types=edit the settings "$\:segment.item.types"
+pool.manager.licenses=edit the settings "$\:segment.licenses"
+pool.manager.pools=edit the settings "$\:segment.pools"
+pool.manager.review.process=edit the settings "$\:segment.review.process"
+pool.manager.taxonomy=edit the settings "$\:segment.taxonomy"
 pools.enabled=Pools
 reset.status=Reset all questions to state "draft".
 review.process.confirm.enable.button=Enable
-review.process.confirm.enable.description=It is recommended to reset all questions the the question bank to the status "draft" to create a clean starting position for the introduction of the review process.<br\><br\>The resetting of the question states can not be undone!
+review.process.confirm.enable.description=It is recommended to reset all questions the the question bank to the status "draft" to create a clean starting position for the introduction of the review process.<br><br>The resetting of the question states can not be undone\!
 review.process.confirm.enable.title=Enable review process
 review.process.enabled=Review process
-shares.enabled=Groups
 segment.configuration=Question bank
 segment.educational.context=Levels
 segment.info.page=Infos page
@@ -71,6 +71,7 @@ segment.pools=Pools
 segment.review.process=Review process
 segment.taxonomy=Subjects
 selected.taxonomy.tree=Taxonomy
+shares.enabled=Groups
 taxonomy.all=All subjects
 taxonomy.competences=Subjects with competence "teach" or "manage"
 taxonomy.selectable=Selectable subjects
