--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
@@ -1,4 +1,4 @@
-#Fri Dec 08 12:28:56 CET 2017
+#Tue Feb 06 08:32:56 CET 2018
 QuestionItemImpl=Question
 actions=Actions
 add.competence.have=Add "$\:have"
@@ -18,12 +18,12 @@ assign.type=Assign
 atleast.one.competence=You must select at least one competence you can edit.
 confirm.delete.level.type.sucessfull=The level type "{0}" was successfully deleted.
 confirm.deleted.level=The level "{0}" was successfully  deleted.
+confirm.merge.level=The level(s) "{0}" was sucessfully merged.
 confirm.removed.competence=The competence(s) was successfully removed.
 confirmation.delete.level=Do you really want to delete the level "{0}"?
 confirmation.delete.level.title=Delete level
 confirmation.delete.type=Do you really want to delete this level type "{0}"?
 confirmation.delete.type.title=Delete level type "{0}"
-confirm.merge.level=The level(s) "{0}" was sucessfully merged.
 confirmation.remove.competence=Do you really want to remove the competence "{0}" for the level {1}?
 confirmation.remove.competence.title=Remove competence
 create.taxonomy=Create new taxonomy
@@ -33,10 +33,10 @@ details.delete=Delete
 edit.competence.title=Edit competence "{1}" of "{0}"
 edit.competences=Edit competences
 edit.level.types=Edit types
-error.delete.num=These taxonomy levels contains the following elements:
-error.delete.num.relations=<strong>{0}</strong> references to learn objects
-error.delete.num.competences=<strong>{0}</strong> competence relations
+error.delete.num=These taxonomy levels contains the following elements\:
 error.delete.num.child.levels=<strong>{0}</strong> children taxonomy levels
+error.delete.num.competences=<strong>{0}</strong> competence relations
+error.delete.num.relations=<strong>{0}</strong> references to learn objects
 error.discontinuous.selection=Discontinous selection of taxonomy levels is not supported.
 error.found.no.allowed.sub.types=No level type was found which is compatible with the selection and the level types configuration.
 error.select.target.level=You must select a taxonomy level.
@@ -101,6 +101,7 @@ table.taxonomy.level.type.empty=There isn't any level type available. If you wan
 target=Target
 target.can.read="$\:target" allowed to read
 taxonomy.admin.enabled=Enable taxonomy
+taxonomy.competence.expiration=Expiration date
 taxonomy.competence.fullName=Name
 taxonomy.competence.type=Competence
 taxonomy.description=Description
