no-jira: wording and typo

--- a/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_en.properties
@@ -1,5 +1,5 @@
 #Thu Nov 16 22:12:21 CET 2017
-admin.description=the document pool offer a library of documents with an automatic structure based upon a taxonomy and competences.
+admin.description=The document pool offer a library of documents with an automatic structure based upon a taxonomy and competences.
 admin.menu.title=Document pool
 admin.menu.title.alt=Document pool
 admin.permissions.description=The access permissions to the document pool are based on the competences of users at the taxonomy levels. The configuration happens with the type at the associated taxonomy level.
