--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
@@ -279,4 +279,4 @@ topnav.qpool=Banque de questions
 topnav.qpool.alt=Banque de questions et partage
 unshare.item=Enlever
 used=Utilis\u00E9
-warning.qpool.index.emtpy=La page d'informations de la banque de documents n'a pas \u00E9t\u00E9 configur\u00E9e. Demandez \u00E0 l'administrateur syst\u00E8me d'ajouter une page d'informations dans <strong>Administration de la banque de questions</strong>.
+warning.qpool.index.emtpy=La page d'informations de la banque de questions n'a pas \u00E9t\u00E9 configur\u00E9e. Demandez \u00E0 l'administrateur syst\u00E8me d'ajouter une page d'informations dans <strong>Administration de la banque de questions</strong>.
