--- a/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_de.properties
@@ -1,5 +1,5 @@
 #Thu Nov 16 22:12:33 CET 2017
-admin.description=Der dokumentenpool stellt eine Dokumentenbibliothek bereit mit automatischer Strukturierung auf der Basis einer Taxonomie und Kompetenzen.
+admin.description=Der Dokumentenpool stellt eine Dokumentenbibliothek bereit mit automatischer Strukturierung auf der Basis einer Taxonomie und Kompetenzen.
 admin.menu.title=Dokumentenpool
 admin.menu.title.alt=Dokumentenpool
 admin.permissions.description=Die Zugangsberechtigungen zum Dokumentenpool basieren auf Kompetenzen von Benutzern auf die jeweiligen Taxonomieebenen. Die Steuerung erfolgt \u00FCber assozierten Ebenentypen.
