OO-3181: Evaluation form elemnent for file upload

--- a/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_en.properties
@@ -3,8 +3,19 @@ add.formhr=Separator
 add.formhtitle=Title
 add.formrubric=Rubric
 add.slider=Add slider
+add.formfileupload=Upload file
 end.label=End
+file.upload.error.mime.type.wrong=The data type is not allowed
+file.upload.error.limit.exeeded=The file is too large
+file.upload.limit=Maximal file size
+file.upload.mime.types=File type
+file.upload.mime.type.all=All
+file.upload.mime.type.audio=Audio
+file.upload.mime.type.image=Image
+file.upload.mime.type.pdf=PDF
+file.upload.mime.type.video=Video
 confirm.done=Do want to submit your evaluation? Once it is submitted, it cannot be edited anymore\!
+error.cannot.save.file=Error while uploading the file!
 evaluation.form.in.use=The resource is already used for assessment purpose. Editing is limited.
 evaluation.in.progress=The evaluation is in progress
 evaluator=User {0}
