--- a/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_de.properties
@@ -3,8 +3,19 @@ add.formhr=Separator
 add.formhtitle=Titel
 add.formrubric=Rubrik
 add.slider=Slider addieren
+add.formfileupload=Datei hochladen
 end.label=End
+file.upload.error.mime.type.wrong=Dieser Dateityps ist nicht erlaubt
+file.upload.error.limit.exeeded=Die Datei ist zu gross
+file.upload.limit=Maximale Dateigr\u00f6sse
+file.upload.mime.types=Dateityp
+file.upload.mime.type.all=Alle
+file.upload.mime.type.audio=Audio
+file.upload.mime.type.image=Bilder
+file.upload.mime.type.pdf=PDF
+file.upload.mime.type.video=Film
 confirm.done=Wollen Sie die Einsch\u00E4tzung abgeben? Sobald sie abgegeben ist, kann sie nicht mehr bearbeitet werden\!
+error.cannot.save.file=Die Datei konnte nicht gespeichert werden!
 evaluation.form.in.use=Die Ressource wird bereits f\u00FCr Einsch\u00E4tzung verwendet. Die Bearbeitung ist begrenzt.
 evaluation.in.progress=Die Einsch\u00E4tzung ist gerade in Bearbeitung
 evaluator=Benutzer {0}
