no-jira: translation pt_BR

--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 16:55:48 CET 2017
+#Wed Feb 07 18:58:12 CET 2018
 MULTIPLE=M\u00FAltipla escolha
 SINGLE=Escolha \u00FAnica
 add=Adicionar
@@ -17,6 +17,8 @@ change.elements=Edi\u00E7\u00E3o
 convert=Converter
 convert.alien=Converter
 convert.to=Converter para\:
+copy.at=Copiado em
+copy.qpool.question=fa\u00E7a uma c\u00F3pia e edite
 correct.answers=Correto
 cut.value=Cortar valor
 delete=Excluir
@@ -134,6 +136,7 @@ form.match=Combine
 form.metadata=Metadados
 form.metadata.description=Descri\u00E7\u00E3o
 form.metadata.title=T\u00EDtulo
+form.pool=Banco de perguntas
 form.score=Pontua\u00E7\u00E3o
 form.score.answer.correct=Correto
 form.score.answer.points=Pontos
@@ -156,6 +159,8 @@ form.testPart.navigationMode.linear=Linear
 form.testPart.navigationMode.nonlinear=N\u00E3o linear
 form.unkown=Desconhecido
 form.upload=Upload de arquivo
+general.identifier=$org.olat.modules.qpool.ui\:general.identifier
+general.master.identifier=$org.olat.modules.qpool.ui\:general.master.identifier
 hotspot.layout=Layout
 hotspot.layout.green=Verde
 hotspot.layout.inverted=Invertido
@@ -175,6 +180,7 @@ item.session.control.attempts=Tentativas
 item.session.control.attempts.hint=Esta limita\u00E7\u00E3o das tentativas s\u00F3 \u00E9 v\u00E1lida para as partes n\u00E3o para todo o teste. As tentativas para todo o teste podem ser limitadas em "Op\u00E7\u00F5es".
 item.session.control.show.solution=Mostrar solu\u00E7\u00E3o
 item.session.control.show.solution.hint=Solu\u00E7\u00E3o \u00E9 mostrada na revis\u00E3o tamb\u00E9m.
+lifecycle.version=$org.olat.modules.qpool.ui\:lifecycle.version
 math.operator.bigger=>
 math.operator.biggerEquals=>\=
 math.operator.equals=\=
@@ -211,6 +217,7 @@ new.testpart=Parte do teste
 new.upload=Enviar arquivo
 preview=Amostra
 preview.solution=Amostra de solu\u00E7\u00E3o
+rights.owners=$org.olat.modules.qpool.ui\:rights.owners
 time.limit.max=Tempo limite (minutos)
 title.add=$org.olat.ims.qti.editor\:title.add
 tools.change.copy=$org.olat.ims.qti.editor\:tools.change.copy
@@ -232,6 +239,7 @@ warning.atleastone=Por favor, escolha pelo menos um elemento.
 warning.atleastonesection=A se\u00E7\u00E3o n\u00E3o pode ser exclu\u00EDda. Um teste ou uma parte de teste deve conter pelo menos uma se\u00E7\u00E3o.
 warning.conversion.list=Foram encontradas algumas incompatibilidades\:
 warning.conversion.standard=Existe o risco de perda de dados ap\u00F3s a convers\u00E3o, mas n\u00E3o foram encontradas incompatibilidades flagrantes.
+warning.copy.from.pool=A quest\u00E3o foi copiada do banco de perguntas. Voc\u00EA pode encontrar a pergunta original sob o ID mestre.
 warning.custom.operator=Esta quest\u00E3o cont\u00E9m uma extens\u00E3o espec\u00EDfica do criador que atualmente n\u00E3o \u00E9 suportada pelo OpenOLAT.
 warning.feedback.cutvalue=O feedback \u00E9 baseado no valor de corte. Voc\u00EA precisa defini-lo primeiro.
 warning.in.use=O recurso j\u00E1 \u00E9 usado para fins de avalia\u00E7\u00E3o. A edi\u00E7\u00E3o \u00E9 limitada.
