--- a/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Nov 22 12:51:52 CET 2016
+#Wed Feb 07 18:58:59 CET 2018
 assessment.status.done=avaliado
 assessment.status.inProgress=Iniciado
 assessment.status.inReview=Para revisar
@@ -24,9 +24,11 @@ filter.passed=Aprovado
 index.introduction=Avalie os participantes deste recurso did\u00E1tico usando sua ferramenta de avalia\u00E7\u00E3o. Isso permite-lhe acessar e modificar os resultados dos testes.
 reopen=Reabrir para avalia\u00E7\u00E3o
 review=Revis\u00E3o
+run.ended=Conclu\u00EDdo
 save.done=Salvar e definir status como "feito"
 statistics.small.overview=Vis\u00E3o geral das estat\u00EDsticas
 table.header.assessmentStatus=Status
+table.header.completion=Conclus\u00E3o
 table.header.elements.toReview=Para revisar
 table.header.name=Usu\u00E1rio
 table.header.numOfInitialLaunch=Recurso aberto pelo menos uma vez
