--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Sep 26 23:33:17 CEST 2017
+#Wed Feb 07 20:56:36 CET 2018
 access=Acesso
 access.binder=As pessoas abaixo t\u00EAm acesso \u00E0 carteira do portf\u00F3lio
 access.rights=Adicionar direitos de acesso
@@ -72,6 +72,7 @@ binder.num.sections.pages={0} se\u00E7\u00F5es com um total de {1} entradas
 binder.status=Status
 binder.title=Pasta do portf\u00F3lio {0}
 binders=Pastas (liga\u00E7\u00F5es)
+bookmark=Marcar como favorito
 categories=Categorias
 categories.add=Adicionar categorias
 categories.hint=Insira a categoria do texto e pressione "Enter" para criar a categoria desejada.
@@ -91,6 +92,8 @@ comment.several={0} coment\u00E1rios
 comment.title=Coment\u00E1rios
 comment.zero=Ainda sem coment\u00E1rios
 compare.evaluations=Avalia\u00E7\u00E3o
+confirm.close.page=Deseja concluir esta entrada? A entrada \u00E9 exibida como conclu\u00EDda para o aprendiz.
+confirm.close.page.other.coaches=As seguintes pessoas tamb\u00E9m t\u00EAm acesso a esta entrada\:
 confirmation=Confirma\u00E7\u00E3o
 create.binder=Criar pasta (liga\u00E7\u00E3o)
 create.empty.binder=Nova pasta vazia
@@ -162,6 +165,7 @@ export.page=Exportar p\u00E1gina
 export.page.onepage=Em p\u00E1gina \u00FAnica
 export.page.pdf=Exportar p\u00E1gina como PDF
 fileupload=Imagem teaser
+filter.sections.empty=Sem se\u00E7\u00F5es abertas
 filter.show.all=Mostrar tudo
 firstName=Primeiro nome
 go.to.trash=Ir para lixeira
@@ -189,6 +193,8 @@ invitation.mail.success=As pessoas convidadas foram notificadas com sucesso via 
 issue=Edi\u00E7\u00E3o
 language=Idioma
 lastName=\u00DAltimo nome
+leave=Remover
+leave.explain=Voc\u00EA realmente deseja remover este fich\u00E1rio da lista? O autor do fich\u00E1rio precisar\u00E1 dar-lhe acesso novamente se quiser visitar novamente.
 mail=E-mail
 mail.body=Corpo do Email
 mail.subject=Assunto do Email
@@ -326,6 +332,9 @@ section.up=Subir
 select.form=Selecione uma pesquisa
 select.mymap=$org.olat.course.nodes.portfolio\:select.mymap
 series=S\u00E9ries
+shared.binders=Fich\u00E1rios
+shared.bookmarks=Favoritos
+shared.entries=Entradas / A fazer
 shared.with.me=Compartilhado comigo
 shared.with.me.text=Uma lista de todos os itens compartilhados por voc\u00EA.
 show.help.binder=Ajuda
@@ -340,6 +349,9 @@ status.inRevision=$\:status.in.revision
 status.not.started=n\u00E3o iniciado
 status.published=publicado
 status.submitted=enviado
+status.user.done=Feito
+status.user.inProcess=Processando
+status.user.incoming=Novo
 summary=Resumo
 summary.placeholder=Breve resumo sobre o conte\u00FAdo
 table.grading.failed.points=<span class\="o_state o_failed"><i class\="o_icon o_icon_failed"> </i> {0} Ponto(s)</span>
@@ -348,14 +360,19 @@ table.grading.passed.points=<span class\="o_state o_passed"><i class\="o_icon o_
 table.grading.points={0} Ponto(s)
 table.header.categories=Categorias
 table.header.change.status=Status
+table.header.closed=Encerrado
 table.header.collection.date=Coletados em
 table.header.course=Cursos
 table.header.course.node=Elemento Curso
 table.header.date=Data
 table.header.down=<i class\='o_icon o_icon o_icon-lg o_icon_move_down'> </i>
+table.header.draft=$\:status.draft
 table.header.grading=Coletados em
+table.header.inRevision=$\:status.in.revision
 table.header.key=ID
 table.header.lastUpdate=\u00DAltima atualiza\u00E7\u00E3o
+table.header.mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorit"> </i>
+table.header.new=Novo
 table.header.numpages=\# Entradas
 table.header.open=Iniciar
 table.header.open.sections=Abrir
@@ -366,6 +383,8 @@ table.header.score=Pontos
 table.header.section=Se\u00E7\u00E3o
 table.header.select.sections=Se\u00E7\u00F5es
 table.header.status=Status
+table.header.status.user=Status-Usu\u00E1rio
+table.header.status.viewer=Status
 table.header.title=T\u00EDtulo
 table.header.type=Tipo
 table.header.up=<i class\='o_icon o_icon o_icon-lg o_icon_move_up'> </i>
