--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:53:58 CET 2017
+#Wed Feb 07 22:18:54 CET 2018
 add=+
 add.to.list=Adicionar \u00E0 lista
 admin.configuration.title=Banco de perguntas
@@ -9,12 +9,27 @@ author.item=Direitos de autor
 bulk.change=Alterar metadados
 bulk.change.description=Aqui voc\u00EA pode mudar em uma \u00FAnica etapa, v\u00E1rios atributos de v\u00E1rias perguntas.
 classification.taxonomic.path=Assunto caminho
+classification.taxonomic.path.incl=Assuntos
 classification.taxonomy.level=Assunto
 classification.taxonomy.parents=Caminho
+collection.add.to.source=Adicione perguntas \u00E0 lista "{0}"
 collection.creationDate=Criado em
 collection.name=Nome
+commands=Pergunta
+confirm.copy.button=Copiar
+confirm.copy.editable=Permitir que outros usu\u00E1rios editem a pergunta
+confirm.copy.message=Voc\u00EA realmente quer copiar as perguntas?
+confirm.copy.questions=Perguntas
+confirm.copy.title=Copiar
+confirm.delete.button=Excluir
+confirm.delete.confirmation=Excluir todas as perguntas
+confirm.delete.confirmation.error=Por favor confirme
+confirm.delete.message=Voc\u00EA deseja realmente excluir essas perguntas permanentemente? Elas n\u00E3o podem ser recuperados.
+confirm.delete.questions=Perguntas
 confirm.delete.source=Voc\u00EA realmente deseja excluir esta lista?
+confirm.delete.title=Excluir
 confirm.unshare=Voc\u00EA realmente deseja remover essa quest\u00E3o "{0}"?
+convert.editable=Permitir que outros usu\u00E1rios editem a pergunta
 convert.format=Formato
 convert.item=Converter
 convert.item.msg=Deseja converter as {0} quest\u00F5es no seguinte formato?
@@ -22,12 +37,16 @@ convert.item.not.possible=Voc\u00EA n\u00E3o selecionou nenhuma pergunta que voc
 convert.item.successful={0} pergunta(s) convertida(s) com \u00EAxito.
 convert.item.warning={0} n\u00E3o foi convertida.
 convert.qti21.hint=Voc\u00EA encontrar\u00E1 informa\u00E7\u00F5es sobre a convers\u00E3o de QTI 1.2 para QTI 2.1 no manual
+convert.questions=Perguntas
 copy=Copiar
 create.collection.description=D\u00EA um nome \u00E0 sua lista.
 create.list=Criar lista
 create.pool=Criar reservat\u00F3rio
 create.success=1 pergunta foi criada.
 create.test=Criar teste
+create.test.format.qti12=QTI 1.2
+create.test.format.qti21=QTI 2.1
+create.test.no.formats=As perguntas selecionadas t\u00EAm o formato errado para criar um teste.
 delete.collection=Excluir lista
 delete.item=Excluir
 delete.pool=Excluir reservat\u00F3rio
@@ -43,8 +62,41 @@ educational.learningTime.minute=m
 educational.learningTime.second=s
 error.input.toolong=O texto que voc\u00EA digitou \u00E9 muito grande ({1} caracteres). Apenas {1} caracteres s\u00E3o permitidos.
 error.select.one=Voc\u00EA precisa selecionar pelo menos uma quest\u00E3o.
+error.select.one.author=Voc\u00EA precisa selecionar pelo menos uma pergunta, para a qual voc\u00EA pode alterar os autores.
+error.select.one.convert=Voc\u00EA precisa selecionar pelo menos uma pergunta, que voc\u00EA possa converter.
+error.select.one.copy=Voc\u00EA precisa selecionar pelo menos uma pergunta, que voc\u00EA possa copiar.
+error.select.one.create.test=Voc\u00EA precisa selecionar pelo menos uma pergunta, que voc\u00EA possa usar em um teste.
+error.select.one.delete=Voc\u00EA precisa selecionar pelo menos uma pergunta, que voc\u00EA possa excluir.
+error.select.one.export=Voc\u00EA precisa selecionar pelo menos uma pergunta, que voc\u00EA possa exportar.
+error.select.one.metadata=Voc\u00EA precisa selecionar pelo menos uma pergunta, que voc\u00EA possa editar.
+error.select.one.remove=Voc\u00EA precisa selecionar pelo menos uma pergunta, que voc\u00EA possa remover.
 error.wrongFloat=Formato de n\u00FAmero errado. Exemplo\: 1.0, 0.5, 0.2
 export.item=Exportar
+export.log=Log
+export.log.header.additional.informations=$\:general.additional.informations
+export.log.header.assessment.type=$\:question.assessmentType
+export.log.header.context=$\:educational.context
+export.log.header.copyright=$\:rights.copyright
+export.log.header.coverage=$\:general.coverage
+export.log.header.creator=$\:rights.creator
+export.log.header.differentiation=$\:question.differentiation
+export.log.header.difficulty=$\:question.difficulty
+export.log.header.item.type=$\:question.type
+export.log.header.keywords=$\:general.keywords
+export.log.header.language=$\:general.language
+export.log.header.learningTime=$\:educational.learningTime
+export.log.header.log.action=A\u00E7\u00E3o
+export.log.header.log.author=Alterado por
+export.log.header.log.date=Data
+export.log.header.numOfAnswerAlternatives=$\:question.numOfAnswerAlternatives
+export.log.header.status=$\:lifecycle.status
+export.log.header.stdevDifficulty=$\:question.stdevDifficulty
+export.log.header.taxonomic.path=$\:classification.taxonomic.path
+export.log.header.title=$\:general.title
+export.log.header.topic=$\:general.topic
+export.log.header.usage=$\:question.usage
+export.log.header.version=$\:lifecycle.version
+export.overview.accept=Usado
 general=Geral
 general.additional.informations=Adicionar informa\u00E7\u00E3o
 general.additional.informations.long=Informa\u00E7\u00F5es adicionais
@@ -55,6 +107,9 @@ general.key=DBkey
 general.keywords=Palavras-chave
 general.language=Idioma
 general.master.identifier=Master ID
+general.taxonomy.level=Assunto
+general.taxonomy.path={0}
+general.title=T\u00EDtulo
 general.topic=T\u00F3pico
 import.excellike.12=Importa\u00E7\u00E3o QTI 1.2 Excel via copia & cola
 import.excellike.21=Importa\u00E7\u00E3o QTI 2.1 Excel via copia & cola
@@ -69,6 +124,7 @@ item.collectioned=Pergunta {0} foi adicionada \u00E0 lista.
 item.copied={0} pergunta(s) foram copiadas.
 item.deleted=Pergunta foi exclu\u00EDda
 item.level=N\u00EDvel
+item.numbers.of={0} / {1}
 item.pooled=Pergunta {0} foi adicionada ao reservat\u00F3rio.
 item.shared=Pergunta {0} foi compartilhada.
 item.type.drawing=Desenhando
@@ -86,13 +142,18 @@ item.type.unkown=Desconhecido
 item.type.upload=Enviar arquivo
 lifecycle.status=Status
 lifecycle.status.draft=Rascunho
+lifecycle.status.endOfLife=Fim da vida
 lifecycle.status.finalVersion=Final
+lifecycle.status.last.modified=Status modificado pela \u00FAltima vez
 lifecycle.status.review=Revis\u00E3o
 lifecycle.status.revised=Revisado
 lifecycle.status.unavailable=Indispon\u00EDvel
 lifecycle.version=Vers\u00E3o
 list=Listas
+locked.readonly=A pergunta est\u00E1 aberta por '{0}'. Portanto, voc\u00EA n\u00E3o consegue editar a pergunta.
+manage.owners=Editar
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorito"> </i>s
+mark.add.to.source=Marque as perguntas como favoritos
 menu.admin=Administra\u00E7\u00E3o
 menu.admin.alt=Administra\u00E7\u00E3o
 menu.admin.levels=N\u00EDvel
@@ -100,24 +161,37 @@ menu.admin.levels.alt=N\u00EDvel
 menu.admin.licenses=Licen\u00E7a
 menu.admin.licenses.alt=Licen\u00E7a
 menu.admin.pools=Administra\u00E7\u00E3o do reservat\u00F3rio
+menu.admin.review.process=Revisar processo
 menu.admin.studyfields=Assunto
 menu.admin.studyfields.alt=Assunto
 menu.admin.types=Tipo
 menu.admin.types.alt=Tipo
+menu.database=Meu banco de perguntas
 menu.database.favorit=Meus favoritos
 menu.database.favorit.alt=Meus Favoritos
 menu.database.my=Minhas perguntas
 menu.database.my.alt=Minhas quest\u00F5es
+menu.final=Final
 menu.pools=Reservat\u00F3rio
 menu.pools.alt=Reservat\u00F3rio
 menu.pools.main=Cat\u00E1logo
 menu.pools.main.alt=Cat\u00E1logo
+menu.queries=Perguntas
+menu.queries.all=Todas perguntas
+menu.queries.without.author=Sem autor
+menu.queries.without.taxonomy.level=Sem departamento
+menu.ratings=Classifica\u00E7\u00F5es
+menu.review=Revis\u00E3o
 menu.share=Compartilhamentos p\u00FAblicos
+metadata.hide=Metadados
 metadatas=Metadados
+my.competences=Meus assuntos
 my.list=Minhas listas
 my.share=Meus compartilhamentos
 new.item=Criar pergunta
 next=Pr\u00F3ximo
+numberOfRatings=N\u00FAmero de classifica\u00E7\u00F5es
+pool.add.to.source=Adicione perguntas ao reservat\u00F3rio "{0}"
 pool.key=ID
 pool.name=Nome
 pool.owners=Propriet\u00E1rios
