--- a/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Fri Jan 23 21:55:27 CET 2015
+#Wed Feb 07 18:50:13 CET 2018
 button.create=Criar
 calloutTrigerLink.select.site=Selecionar p\u00E1gina
 calloutTriggerLink=Escolher arquivo/criar/enviar Link
@@ -7,6 +7,7 @@ chooseLink=Escolher arquivo
 command.create=Criar p\u00E1gina e abrir no editor
 command.edit=Abrir p\u00E1gina no editor
 command.preview.label=Selecionar arquivo
+command.remove=Remover p\u00E1gina
 createLink=Criar arquivo
 error.deleted=O arquivo configurado n\u00E3o existe. Crie o arquivo de novo ou escolha outro arquivo.
 error.name.empty=Por favor, insira um nome para o arquivo a ser criado
