--- a/src/main/java/org/olat/ims/qti21/questionimport/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/questionimport/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Jul 25 22:13:31 CEST 2017
+#Wed Feb 07 18:57:01 CET 2018
 download.example=$org.olat.ims.qti.questionimport\:download.example
 error.at.line=Problema com a linha {0}
 form.importdata=$org.olat.ims.qti.questionimport\:form.importdata
@@ -6,6 +6,8 @@ input.title=$org.olat.ims.qti.questionimport\:input.title
 item.type.essay=$org.olat.ims.qti.editor\:item.type.essay
 item.type.fib=$org.olat.ims.qti.editor\:item.type.fib
 item.type.kprim=$org.olat.ims.qti.editor\:item.type.kprim
+item.type.match=$org.olat.ims.qti21.ui.editor\:new.match
+item.type.matchdraganddrop=$org.olat.ims.qti21.ui.editor\:new.matchdraganddrop
 item.type.mc=$org.olat.ims.qti.editor\:item.type.mc
 item.type.sc=$org.olat.ims.qti.editor\:item.type.sc
 table.header.points=$org.olat.ims.qti.questionimport\:table.header.points
