--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Mon Dec 18 21:56:43 CET 2017
+#Wed Feb 07 18:57:28 CET 2018
 actualPoints=$org.olat.modules.iq\:actualPoints
 admin.12.title=Configura\u00E7\u00F5es QTI 1.2
 admin.menu.title=QTI 2.1
@@ -177,6 +177,7 @@ questions=N\u00FAmero de perguntas no teste
 reset.data=Resetar dados
 reset.test.data.acknowledge=Eu entendo que os dados ser\u00E3o exclu\u00EDdos definitivamente.
 reset.test.data.text=Deseja realmente redefinir os dados de avalia\u00E7\u00E3o do teste? Os resultados de <strong>{0} usu\u00E1rios</strong> ser\u00E3o exclu\u00EDdos definitivamente.
+reset.test.data.text.identity=Voc\u00EA realmente deseja redefinir os dados de avalia\u00E7\u00E3o do teste? Os resultados de <strong>"{0}"</strong> ser\u00E3o definitivamente exclu\u00EDdos.
 reset.test.data.text.ref=Voc\u00EA n\u00E3o pode excluir todos os dados deste teste porque \u00E9 referenciado pelos seguintes recursos "{0}".
 reset.test.data.title=Redefinir dados do teste
 response=Resposta
