--- a/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:53:39 CET 2017
+#Wed Feb 07 19:00:18 CET 2018
 admin.description=O reservat\u00F3rio (pool) de documentos oferece uma biblioteca de documentos com uma estrutura autom\u00E1tica baseada em taxonomia e compet\u00EAncias.
 admin.menu.title=Reservat\u00F3rio de documentos
 admin.menu.title.alt=Reservat\u00F3rio de documentos
@@ -34,3 +34,4 @@ teach.can.read.parent.levels.explain.1=Permitir acesso de leitura a
 teach.can.read.parent.levels.explain.2=n\u00EDveis acima
 teach.can.write=Permitir acesso de grava\u00E7\u00E3o
 teach.competence=Compet\u00EAncia do professor
+warning.taxonomy.index.emtpy=A p\u00E1gina de informa\u00E7\u00F5es do "reservat\u00F3rio" de documentos n\u00E3o foi configurada corretamente. Pergunte ao administrador do sistema para adicionar uma p\u00E1gina de informa\u00E7\u00F5es na <strong>administra\u00E7\u00E3o do reservat\u00F3rio de documentos</strong>.
