no-jira: missing i18n key in assessment tool

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -188,6 +188,7 @@ tool.pull=Laufenden Test einziehen
 time.limit.max=Zeitbeschr\u00E4nkung
 time.limit.test.explain=Der Test dauert maximal <strong>{0}</strong>.
 warning.assessment.mode=Folgende Pr\u00FCfungkonfiguration ist aktiv:
+validate.xml.signature=Testquitting validieren
 warning.assessment.mode.date={0} von {1} bis {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
 warning.users.extra.time=Sie m\u00FCssen mindesten ein Benutzer ausw\u00E4hlen, deren Test man verl\u00E4ngern kann.
