--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -187,6 +187,7 @@ time.limit.test.explain=The test takes a maximum of <strong>{0}</strong>.
 tool.delete.data=Reset all data
 tool.extra.time=Extend test time
 tool.pull=Pull running test
+validate.xml.signature=Validate test receipt
 warning.assessment.mode=Test in process\:
 warning.assessment.mode.date={0} from {1} til {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
