--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
@@ -187,6 +187,7 @@ time.limit.test.explain=Le test dure au plus <strong>{0}</strong>.
 tool.delete.data=R\u00E9initialiser toutes les donn\u00E9es
 tool.extra.time=Prolonger la dur\u00E9e du test
 tool.pull=Reprendre un test en cours
+validate.xml.signature=Valider la signature
 warning.assessment.mode=La configuration d'examen suivante est active
 warning.assessment.mode.date={0} de {1} \u00E0 {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
