--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
@@ -152,4 +152,5 @@ start=Avviare
 table.header.lastModified=Utlima modifica
 table.header.results=Risultati
 time.limit.max=Tempo limite
+validate.xml.signature=Validare ricevuta test
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
