--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
@@ -160,4 +160,5 @@ start=Iniciar
 table.header.lastModified=\u00DAltima modifica\u00E7\u00E3o
 table.header.results=Resultados
 time.limit.max=Limite de tempo
+validate.xml.signature=Validar recibo de teste
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
