--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
@@ -145,3 +145,4 @@ showResults.detailed=\u6210\u7EE9\u5355
 showResults.title=\u6210\u7EE9\u5355
 showResults.visibility=\u6309\u4ECE"{0}"\u5230"{1}"\u663E\u793A\u60A8\u7684\u6210\u7EE9\u5355\u3002
 start=\u5F00\u59CB
+validate.xml.signature=\u9A8C\u8BC1\u6D4B\u9A8C\u51ED\u636E
