--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_de.properties
@@ -133,3 +133,6 @@ warning.atleastone.level=Sie m\u00FCssen mindestens eine Ebene w\u00E4hlen dass 
 warning.atleastone.level.competence=Sie m\u00FCssen mindestens eine Ebene w\u00E4hlen.
 warning.delete.level=Die Ebene darf nicht gel\u00F6scht werden. Sie wird noch benutzt.
 warning.delete.level.type=Der Ebenentype wurde nicht gel\u00F6scht. Er ist noch benutzt.
+warning.taxonomy.level.deleted=Diese Taxonomieebene ist nicht mehr verf\u00FCgbar.
+warning.taxonomy.level.type.deleted=Dieser Ebenentype ist nicht mehr verf\u00FCgbar.
+
