--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_en.properties
@@ -133,3 +133,6 @@ warning.atleastone.level=You must at least one taxonomy level you can edit.
 warning.atleastone.level.competence=You must at least one taxonomy level.
 warning.delete.level=The level cannot be deleted because it is still in use.
 warning.delete.level.type=The level type "{0}" was not deleted because it is still in use.
+warning.taxonomy.level.deleted=This taxonomy level is no longer available.
+warning.taxonomy.level.type.deleted=This level type is no longer available.
+
