--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_fr.properties
@@ -132,4 +132,6 @@ type.taxonomy.level=Attribuer un type de niveau
 warning.atleastone.level=Vous devez s\u00E9lectionner au moins un niveau que vous pouvez \u00E9diter.
 warning.atleastone.level.competence=Vous devez s\u00E9lectionner au moins un niveau.
 warning.delete.level=Ce niveau de la taxonomie ne peut pas \u00EAtre effac\u00E9 car il est encore utilis\u00E9.
-warning.delete.level.type=Le niveau de la taxonomie n'a pas \u00E9t\u00E9 effac\u00E9 car il est encore utilis\u00E9.
+warning.delete.level.type=Le type de niveau de la taxonomie n'a pas \u00E9t\u00E9 effac\u00E9 car il est encore utilis\u00E9.
+warning.taxonomy.level.deleted=La niveau de la taxonomie n'est plus disponible.
+warning.taxonomy.level.type.deleted=Le type de niveau n'est plus disponible.
